objects/sf_devops__Object_Activity__c.object
<CustomObject>
    <description>A record of activity for an object in the Dev ops Center.  An activity is some operation performed that effects the state of an object.</description>
    <fields>
        <fullName>sf_devops__Activity_Date__c</fullName>
        <description>The date this activity occurred, this could be different then the date the record was created.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Activity_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Change_Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The change submission involved in this activity</description>
        <label>Change Submission</label>
        <referenceTo>sf_devops__Change_Submission__c</referenceTo>
        <relationshipLabel>Object Activities</relationshipLabel>
        <relationshipName>Object_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Environment involved with this activity</description>
        <label>Environment</label>
        <referenceTo>sf_devops__Environment__c</referenceTo>
        <relationshipLabel>Object Activities</relationshipLabel>
        <relationshipName>Object_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks an activity as an internal book keeping activity that should not be displayed</description>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Message__c</fullName>
        <description>The summary of the activity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Operation_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the async results for this activity</description>
        <label>Operation Result</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Object Activities</relationshipLabel>
        <relationshipName>Object_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Parent_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the activity that is the main activity being recorded.</description>
        <label>Parent Activity</label>
        <referenceTo>sf_devops__Object_Activity__c</referenceTo>
        <relationshipLabel>Child Activities</relationshipLabel>
        <relationshipName>Child_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The pipeline involved in this activity</description>
        <label>Pipeline</label>
        <referenceTo>sf_devops__Pipeline__c</referenceTo>
        <relationshipLabel>Object Activities</relationshipLabel>
        <relationshipName>Object_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Project__c</fullName>
        <description>The project we are associated with.</description>
        <label>Project</label>
        <referenceTo>sf_devops__Project__c</referenceTo>
        <relationshipLabel>Object Activities</relationshipLabel>
        <relationshipName>Object_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Summary__c</fullName>
        <description>The summary of the activity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Target_Pipeline_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The stage that received this activity</description>
        <label>Target Pipeline Stage</label>
        <referenceTo>sf_devops__Pipeline_Stage__c</referenceTo>
        <relationshipLabel>Target Object Activities</relationshipLabel>
        <relationshipName>Object_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Work_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The work item involved in this activity</description>
        <label>Work Item</label>
        <referenceTo>sf_devops__Work_Item__c</referenceTo>
        <relationshipLabel>Object Activities</relationshipLabel>
        <relationshipName>Object_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Object Activity</label>
    <nameField>
        <displayFormat>OA-{0}</displayFormat>
        <label>Object Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sf_devops__Change_Submission_Work_Item</fullName>
        <active>true</active>
        <description>Enforce Change_Submission__r is from the same Work_Item on an Object_Activity.</description>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Change_Submission__c),
ISCHANGED(sf_devops__Work_Item__c)
),
NOT(ISBLANK(sf_devops__Change_Submission__c)),
sf_devops__Change_Submission__r.sf_devops__Work_Item__c &lt;&gt; sf_devops__Work_Item__c

)</errorConditionFormula>
        <errorMessage>The referenced Change_Submission__c must be from the same Work_Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Environment_Project</fullName>
        <active>true</active>
        <description>Enforce Environment__r is from the same project as the Object_Activity.</description>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Environment__c)
),
NOT(ISBLANK(sf_devops__Environment__c)),
sf_devops__Project__c &lt;&gt; sf_devops__Environment__r.sf_devops__Project__c

)</errorConditionFormula>
        <errorMessage>The referenced Environment__c must be from the same project as the Object_Activity__c.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Parent_Activity_Project</fullName>
        <active>true</active>
        <description>Enforce Parent_Activity__r is from the same project as the Object_Activity.</description>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Parent_Activity__c)
),
NOT(ISBLANK(sf_devops__Parent_Activity__c)),
sf_devops__Project__c &lt;&gt; sf_devops__Parent_Activity__r.sf_devops__Project__c

)</errorConditionFormula>
        <errorMessage>The referenced Parent_Activity__c must be from the same project as the Object_Activity__c.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Pipeline_Project</fullName>
        <active>true</active>
        <description>Enforce Pipeline__r is from the same project as the Object_Activity.</description>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Pipeline__c)
),
NOT(ISBLANK(sf_devops__Pipeline__c)),
sf_devops__Project__c &lt;&gt; sf_devops__Pipeline__r.sf_devops__Project__c

)</errorConditionFormula>
        <errorMessage>The referenced Pipeline__c must be from the same project as the Object_Activity__c.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Target_Stage_Pipeline</fullName>
        <active>true</active>
        <description>Enforce Target_Pipeline_Stage__r is from the same Pipeline__c referenced by the Object_Activity.</description>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Target_Pipeline_Stage__c),
ISCHANGED(sf_devops__Pipeline__c)
),
NOT(ISBLANK(sf_devops__Target_Pipeline_Stage__c)),
sf_devops__Pipeline__c &lt;&gt; sf_devops__Target_Pipeline_Stage__r.sf_devops__Pipeline__c

)</errorConditionFormula>
        <errorMessage>The referenced Target_Pipeline_Stage__c must be from the same Pipeline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Work_Item_Project</fullName>
        <active>true</active>
        <description>Enforce Work_Item__r is from the same project as the Object_Activity.</description>
        <errorConditionFormula>AND(
OR(
ISNEW(),
ISCHANGED(sf_devops__Work_Item__c)
),
NOT(ISBLANK(sf_devops__Work_Item__c)),
sf_devops__Project__c &lt;&gt; sf_devops__Work_Item__r.sf_devops__Project__c

)</errorConditionFormula>
        <errorMessage>The referenced Work_Item__c must be from the same project as the Object_Activity__c.</errorMessage>
    </validationRules>
</CustomObject>